04 Fix circle overflow

--- a/04-tech-book-club-landing-page/src/style.css
+++ b/04-tech-book-club-landing-page/src/style.css
@@ -195,7 +195,6 @@ body {
   display: inline-block;
 }
 
-/* TODO: Fix circle clip */
 .not-average__word-circle::before {
   content: "";
   position: absolute;
@@ -205,9 +204,9 @@ body {
   background-image: url("$images/pattern-circle.png");
   background-repeat: no-repeat;
   background-position: 50%;
-  background-size: auto;
-  width: 100%;
-  height: 100%;
+  background-size: contain;
+  width: 3em;
+  height: 3em;
   z-index: -1;
 }
 
